--- a/index.html
+++ b/index.html
@@ -14,22 +14,26 @@
 </head>
 <body>
   <!-- NAV -->
- <header class="nav">
+<header class="nav">
   <div class="brand">Ayesha Khalid</div>
 
+  <!-- Hamburger Icon -->
   <div class="hamburger" onclick="document.querySelector('.nav nav').classList.toggle('active')">
     <span></span>
     <span></span>
     <span></span>
   </div>
 
+  <!-- Navbar Links -->
   <nav>
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
     <a href="#skills">Skills</a>
+    <a href="#certificates">Certificates</a>
     <a href="#contact">Contact</a>
   </nav>
 </header>
+s
 
 
   <!-- HERO -->
@@ -244,4 +248,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
