--- a/index.html
+++ b/index.html
@@ -200,6 +200,14 @@ s
       <p>Full stack business website with dynamic services and dashboards.</p>
     </div>
   </div>
+
+  <!-- Card 7 -->
+    <div class="project-card" data-video="https://drive.google.com/file/d/1w0Qo0DbBzwwq74D84ybUYJQN58xwcIUP/preview">
+      <h3>Glam Hub</h3>
+      <p>A Full-Stack beauty & cosmetics shopping website offering seamless online makeup and skincare purchases.</p>
+    </div>
+  </div>
+  
 </section>
 
 <!-- Popup Modal -->
@@ -248,5 +256,6 @@ s
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
